# docs/swagger.yaml
@@ -40,6 +40,47 @@ definitions:
       username:
         type: string
     type: object
+  invoice.InvoiceReadModel:
+    properties:
+      created_at:
+        type: string
+      id:
+        type: integer
+      paid:
+        $ref: '#/definitions/money.Money'
+      pdf_url:
+        type: string
+      status:
+        $ref: '#/definitions/invoice.Status'
+      subscription_name:
+        type: string
+      subscription_price:
+        $ref: '#/definitions/money.Money'
+      updated_at:
+        type: string
+      user_email:
+        type: string
+    type: object
+  invoice.Status:
+    enum:
+    - paid
+    - open
+    - void
+    - uncollectible
+    type: string
+    x-enum-varnames:
+    - InvoiceStatusPaid
+    - InvoiceStatusOpen
+    - InvoiceStatusVoid
+    - InvoiceStatusUncollectible
+  money.Money:
+    properties:
+      amount:
+        description: Amount in cents
+        type: integer
+      currency:
+        type: string
+    type: object
   plans.BillingInterval:
     enum:
     - daily
@@ -60,21 +101,18 @@ definitions:
     - BillingIntervalAnnual
   plans.CreatePlanRequest:
     properties:
-      amount:
-        type: integer
       billing_interval:
         $ref: '#/definitions/plans.BillingInterval'
-      currency:
-        type: string
       description:
         type: string
+      money:
+        $ref: '#/definitions/money.Money'
       name:
         type: string
     required:
-    - amount
     - billing_interval
-    - currency
     - description
+    - money
     - name
     type: object
   plans.PlanStatus:
@@ -87,13 +125,9 @@ definitions:
     - PlanStatusDeprecated
   plans.SubscriptionPlans:
     properties:
-      amount:
-        type: integer
       billing_interval:
         $ref: '#/definitions/plans.BillingInterval'
       created_at:
-        type: string
-      currency:
         type: string
       description:
         type: string
@@ -101,6 +135,8 @@ definitions:
         type: integer
       name:
         type: string
+      price:
+        $ref: '#/definitions/money.Money'
       status:
         $ref: '#/definitions/plans.PlanStatus'
       updated_at:
@@ -108,21 +144,53 @@ definitions:
     type: object
   plans.UpdatePlanRequest:
     properties:
-      amount:
-        type: integer
       billing_interval:
         $ref: '#/definitions/plans.BillingInterval'
-      currency:
-        type: string
       description:
         type: string
+      money:
+        $ref: '#/definitions/money.Money'
       name:
         type: string
     type: object
-  plans.UpdatePlanStatusRequest:
+  subscription.Status:
+    enum:
+    - trial
+    - active
+    - past_due
+    - cancelled
+    type: string
+    x-enum-varnames:
+    - SubscriptionStatusTrial
+    - SubscriptionStatusActive
+    - SubscriptionStatusPastDue
+    - SubscriptionStatusCancelled
+  subscription.SubscriptionsReadModel:
     properties:
+      cancel_at_period_end:
+        type: boolean
+      cancelled_at:
+        type: string
+      created_at:
+        type: string
+      current_period_ends_at:
+        type: string
+      id:
+        type: integer
+      plan_name:
+        type: string
+      plan_price:
+        $ref: '#/definitions/money.Money'
       status:
-        $ref: '#/definitions/plans.PlanStatus'
+        $ref: '#/definitions/subscription.Status'
+      subscription_plan_billing_interval:
+        $ref: '#/definitions/plans.BillingInterval'
+      trial_ends_at:
+        type: string
+      updated_at:
+        type: string
+      user_account_email:
+        type: string
     type: object
 host: localhost:8080
 info:
@@ -297,6 +365,44 @@ paths:
       summary: Register a new user account
       tags:
       - accounts
+  /api/v1/invoices/{id}:
+    get:
+      parameters:
+      - description: Invoice ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/invoice.InvoiceReadModel'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Get an invoice by ID
+      tags:
+      - invoices
   /api/v1/plans:
     get:
       parameters:
@@ -417,6 +523,44 @@ paths:
       summary: Create a subscription plan
       tags:
       - plans
+  /api/v1/plans/deprecate/{id}:
+    patch:
+      consumes:
+      - application/json
+      parameters:
+      - description: Plan ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/plans.SubscriptionPlans'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Deprecate a subscription plan by ID
+      tags:
+      - plans
   /api/v1/plans/update/{id}:
     patch:
       consumes:
@@ -467,29 +611,21 @@ paths:
       summary: Update a subscription plan
       tags:
       - plans
-  /api/v1/plans/update/status/{id}:
-    patch:
-      consumes:
-      - application/json
+  /api/v1/subscriptions/{id}:
+    get:
       parameters:
-      - description: Plan ID
+      - description: Subscription ID
         in: path
         name: id
         required: true
         type: integer
-      - description: Update plan status request
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/plans.UpdatePlanStatusRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/plans.SubscriptionPlans'
+            $ref: '#/definitions/subscription.SubscriptionsReadModel'
         "400":
           description: Bad Request
           schema:
@@ -508,7 +644,15 @@ paths:
             additionalProperties:
               type: string
             type: object
-      summary: Update a plan's status
+      security:
+      - BearerAuth: []
+      summary: Get a subscription by ID
       tags:
-      - plans
+      - subscriptions
+securityDefinitions:
+  BearerAuth:
+    description: Type "Bearer" followed by a space and your JWT token
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
